Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16894

The MDS should not limit the stripe count for a conflicting stripe offset and pool name parameters

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0, Lustre 2.15.5
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      When a user specified stripe offset not matching the OST index of the pool. The MDS will not set the pool name in the file layout (LU-15658). But it will still limit the stripe count to the number of OST inside the pool, this is a bug.

      lfs pool_list lustre.pool1
      Pool: lustre.pool1
      lustre-OST0000_UUID
      
      # set the pool1 on a dir
      lfs setstripe -p pool1 testdir/
      # conflicting stripe offset parameter -> ost 1 is not in pool1
      lfs setstripe  -c 2 -i 1 testdir/test1
      # not conflicting stripe offset parameter -> ost 0 is not in pool1
      lfs setstripe  -c 2 -i 0 testdir/test2
      
      lfs getstripe testdir/test*
      testdir/test1
      lmm_stripe_count:  1
      lmm_stripe_size:   1048576
      lmm_pattern:       raid0
      lmm_layout_gen:    0
      lmm_stripe_offset: 1
              obdidx           objid           objid           group
                   1               3            0x3      0x280000400
      
      testdir/test2
      lmm_stripe_count:  1
      lmm_stripe_size:   1048576
      lmm_pattern:       raid0
      lmm_layout_gen:    0
      lmm_stripe_offset: 0
      lmm_pool:          pool1
              obdidx           objid           objid           group
                   0               3            0x3      0x240000400
      # the stripe count of test1 should be 2 because no pool is set
      

            eaujames Etienne Aujames
            eaujames Etienne Aujames
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: